# neuralNetwork

./: 1test.data  2test.data  CMakeLists.txt  README.md  another1test.data  test.data
include/: Input.h  Layer.h  Network.h  Neuron.h  filesManager.h  templateForeachDeleteFunction.h
src/: Input.cpp  Layer.cpp  Network.cpp  Neuron.cpp  filesManager.cpp  main.cpp
test/: InputTest.cpp  LayerTest.cpp  NetworkTest.cpp  NeuronTest.cpp
